--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "prettier": "^2.7.1",
     "tslint": "^6.1.2",
     "typescript": "~4.8.4"
+  },
+  "dependencies": {
+    "moment": "^2.29.4"
   }
 }
